{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 326,
  "lineage": "0c8cb2b1-5e3d-4c83-c7d1-a16a175a039e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "four_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b825fe2cce4ff514",
            "domain": "vpc",
            "id": "eipalloc-0b825fe2cce4ff514",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-139-57-19.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.139.57.19",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "four_eip"
            },
            "tags_all": {
              "Name": "four_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "four_private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-082b1f4237bd816a1",
            "arn": "arn:aws:ec2:ap-southeast-1:103602695421:instance/i-0a38915d78c7c55e7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a38915d78c7c55e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "four_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-028244f4f491ef76e",
            "private_dns": "ip-152-40-4-24.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "152.40.4.24",
            "public_ip": "13.215.250.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b3bd11e6be5cbe65",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bf95f8ddfdc3ef8",
            "tags": {
              "Name": "four_private_ec2"
            },
            "tags_all": {
              "Name": "four_private_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eea9e1806d20aa49"
            ]
          },
          "dependencies": [
            "aws_key_pair.four_key_pair",
            "aws_security_group.four_security_group",
            "aws_subnet.four_private_subnet",
            "aws_vpc.four_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "four_public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-082b1f4237bd816a1",
            "arn": "arn:aws:ec2:ap-southeast-1:103602695421:instance/i-0a1e0c254e48ee95b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a1e0c254e48ee95b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "four_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01b097b0d420285d1",
            "private_dns": "ip-152-40-2-112.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "152.40.2.112",
            "public_ip": "18.138.242.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d692013a9cebfe33",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a52fde98a2eb9767",
            "tags": {
              "Name": "four_public_ec2"
            },
            "tags_all": {
              "Name": "four_public_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eea9e1806d20aa49"
            ]
          },
          "dependencies": [
            "aws_key_pair.four_key_pair",
            "aws_security_group.four_security_group",
            "aws_subnet.four_public_subnet",
            "aws_vpc.four_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "four_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:103602695421:internet-gateway/igw-0aa0bd32dcec72114",
            "id": "igw-0aa0bd32dcec72114",
            "owner_id": "103602695421",
            "tags": {
              "Name": "four_igw"
            },
            "tags_all": {
              "Name": "four_igw"
            },
            "vpc_id": "vpc-0f8bbb24fa4660505"
          },
          "dependencies": [
            "aws_vpc.four_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "four_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b825fe2cce4ff514",
            "connectivity_type": "public",
            "id": "nat-09276d8c2260dbe7d",
            "network_interface_id": "eni-00222a185fec9a0b9",
            "private_ip": "152.40.2.199",
            "public_ip": "18.139.57.19",
            "subnet_id": "subnet-0a52fde98a2eb9767",
            "tags": {
              "Name": "four_ngw"
            },
            "tags_all": {
              "Name": "four_ngw"
            }
          },
          "dependencies": [
            "aws_eip.four_eip",
            "aws_internet_gateway.four_igw",
            "aws_subnet.four_public_subnet",
            "aws_vpc.four_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "four_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:103602695421:route-table/rtb-0e52633831615b918",
            "id": "rtb-0e52633831615b918",
            "owner_id": "103602695421",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09276d8c2260dbe7d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "four_private_route"
            },
            "tags_all": {
              "Name": "four_private_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8bbb24fa4660505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.four_eip",
            "aws_internet_gateway.four_igw",
            "aws_nat_gateway.four_ngw",
            "aws_subnet.four_public_subnet",
            "aws_vpc.four_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "four_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:103602695421:route-table/rtb-0b9479574ee3fb1f5",
            "id": "rtb-0b9479574ee3fb1f5",
            "owner_id": "103602695421",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa0bd32dcec72114",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "four_public_route"
            },
            "tags_all": {
              "Name": "four_public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8bbb24fa4660505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.four_igw",
            "aws_vpc.four_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062619a153ec464a6",
            "route_table_id": "rtb-0b9479574ee3fb1f5",
            "subnet_id": "subnet-0a52fde98a2eb9767"
          },
          "dependencies": [
            "aws_internet_gateway.four_igw",
            "aws_route_table.four_public_route",
            "aws_subnet.four_public_subnet",
            "aws_vpc.four_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046777bb4795954c8",
            "route_table_id": "rtb-0e52633831615b918",
            "subnet_id": "subnet-00bf95f8ddfdc3ef8"
          },
          "dependencies": [
            "aws_eip.four_eip",
            "aws_internet_gateway.four_igw",
            "aws_nat_gateway.four_ngw",
            "aws_route_table.four_private_route",
            "aws_subnet.four_private_subnet",
            "aws_subnet.four_public_subnet",
            "aws_vpc.four_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "four_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:103602695421:security-group/sg-0eea9e1806d20aa49",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eea9e1806d20aa49",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "four_security_group",
            "name_prefix": "",
            "owner_id": "103602695421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "four_security_group"
            },
            "tags_all": {
              "Name": "four_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8bbb24fa4660505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.four_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "four_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:103602695421:subnet/subnet-00bf95f8ddfdc3ef8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "152.40.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bf95f8ddfdc3ef8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "103602695421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "four_private_subnet"
            },
            "tags_all": {
              "Name": "four_private_subnet"
            },
            "vpc_id": "vpc-0f8bbb24fa4660505"
          },
          "dependencies": [
            "aws_vpc.four_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "four_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:103602695421:subnet/subnet-0a52fde98a2eb9767",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "152.40.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a52fde98a2eb9767",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "103602695421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "four_public_subnet"
            },
            "tags_all": {
              "Name": "four_public_subnet"
            },
            "vpc_id": "vpc-0f8bbb24fa4660505"
          },
          "dependencies": [
            "aws_vpc.four_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "four_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:103602695421:vpc/vpc-0f8bbb24fa4660505",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "152.40.0.0/16",
            "default_network_acl_id": "acl-02c641fb6ae65c771",
            "default_route_table_id": "rtb-0f2b362cda72b439e",
            "default_security_group_id": "sg-0f4036b455ddfdfa7",
            "dhcp_options_id": "dopt-0b16bbe092d97948a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f8bbb24fa4660505",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2b362cda72b439e",
            "owner_id": "103602695421",
            "tags": {
              "Name": "four_vpc"
            },
            "tags_all": {
              "Name": "four_vpc"
            }
          }
        }
      ]
    }
  ]
}